# charpaint

./: Cargo.toml  README.md  build.rs  design_and_state_musings.md  index.html
.claude/: settings.local.json
locales/: help.en.yaml
pkg/: charpaint.d.ts  charpaint.js  charpaint_bg.wasm  charpaint_bg.wasm.d.ts  package.json
src/: asciiart.rs  dom_setup.rs  lib.rs  util.rs  wiring.rs
