[package]
name = "charpaint"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

# Bridges Rust async/await to JS Promises — used for the clipboard write API.
wasm-bindgen-futures = "0.4"

# Raw JS type bindings (Object, Function, Promise, Reflect, etc.).
# Used for calling browser APIs not yet wrapped by web-sys (e.g. navigator.clipboard).
js-sys = "0.3"

# Makes Rust panics appear in the browser console with a readable message.
# Essential during development; harmless in production.
console_error_panic_hook = "0.1"

# Web platform APIs. Each feature flag enables one IDL interface.
# Add new flags here as more browser APIs are needed.
[dependencies.web-sys]
version = "0.3"
features = [
  "console",       # web_sys::console::log_1 etc. for debug logging
  "Document",      # get_element_by_id, create_element, query_selector_all
  "Element",       # set_class_name, get/set_attribute, class_list, closest
  "Event",         # prevent_default, target (inherited by MouseEvent)
  "EventTarget",   # add_event_listener_with_callback (inherited by Element, Window)
  "HtmlElement",   # general HtmlElement access
  "HtmlInputElement", # hidden input for mobile keyboard capture (text tool)
  "MouseEvent",    # type for mouse event handlers
  "Node",          # append_child, set_text_content
  "NodeList",      # item(), length() — result of query_selector_all
  "Window",        # web_sys::window(), .document()
  "DomTokenList",  # class_list().add_1(), remove_1(), contains()
  "KeyboardEvent", # keydown handler for Ctrl+Z / Shift+Ctrl+Z
  "TouchEvent",    # type for touch event handlers
  "Touch",         # individual touch point within a TouchEvent
  "TouchList",     # collection of Touch objects (e.touches(), etc.)
  "DomRect",        # bounding rect returned by getBoundingClientRect — used for pinch-zoom scroll correction
  "PointerEvent",   # unified pointer events used by the help-mode overlay (desktop hover + mobile tap)
  "DragEvent",      # drop/dragover event type for image drag-and-drop
  "DataTransfer",   # e.data_transfer() — carries dropped files
  "FileList",       # data_transfer.files() result
  "File",           # individual dropped file; type_() for MIME check
  "Blob",           # File inherits Blob; needed for create_object_url_with_blob
  "Url",            # Url::create_object_url_with_blob / revoke_object_url
  "HtmlImageElement",        # temp off-screen img element to measure natural_width/height
  "HtmlCanvasElement",       # off-screen canvas for pixel extraction (AA pipeline)
  "CanvasRenderingContext2d", # drawImage + getImageData on the scratch canvas
  "ImageData",               # getImageData return type; .data() yields Uint8ClampedArray
]

# chrono runs only on the host at compile time (build.rs) — never touches the WASM output.
[build-dependencies]
chrono = { version = "0.4", features = ["clock"] }
# serde + serde_yaml: parse locales/help.en.yaml at compile time to generate help_strings.rs.
serde      = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
